--- a/view/PlanCaseDialog.ui
+++ b/view/PlanCaseDialog.ui
@@ -7,141 +7,19 @@
     <x>0</x>
     <y>0</y>
     <width>785</width>
-    <height>486</height>
+    <height>555</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
-  <widget class="QGroupBox" name="import_groupbox">
-   <property name="enabled">
-    <bool>true</bool>
-   </property>
-   <property name="geometry">
-    <rect>
-     <x>20</x>
-     <y>75</y>
-     <width>381</width>
-     <height>90</height>
-    </rect>
-   </property>
-   <property name="title">
-    <string>Import</string>
-   </property>
-   <widget class="QLineEdit" name="parcel_shape_edit">
-    <property name="geometry">
-     <rect>
-      <x>109</x>
-      <y>58</y>
-      <width>211</width>
-      <height>21</height>
-     </rect>
-    </property>
-    <property name="readOnly">
-     <bool>true</bool>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label">
-    <property name="geometry">
-     <rect>
-      <x>110</x>
-      <y>39</y>
-      <width>112</width>
-      <height>16</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Parcel Shapefile</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="open_parcel_file_button">
-    <property name="geometry">
-     <rect>
-      <x>330</x>
-      <y>56</y>
-      <width>42</width>
-      <height>25</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-    <property name="icon">
-     <iconset resource="resources.qrc">
-      <normaloff>:/plugins/lm2/open.png</normaloff>:/plugins/lm2/open.png</iconset>
-    </property>
-   </widget>
-   <widget class="QRadioButton" name="point_rbutton">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>20</y>
-      <width>82</width>
-      <height>17</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Point</string>
-    </property>
-   </widget>
-   <widget class="QRadioButton" name="line_rbutton">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>40</y>
-      <width>82</width>
-      <height>17</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Line</string>
-    </property>
-   </widget>
-   <widget class="QRadioButton" name="polygon_rbutton">
-    <property name="enabled">
-     <bool>true</bool>
-    </property>
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>60</y>
-      <width>82</width>
-      <height>17</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Polygon</string>
-    </property>
-   </widget>
-  </widget>
-  <widget class="QTreeWidget" name="result_twidget">
-   <property name="geometry">
-    <rect>
-     <x>410</x>
-     <y>30</y>
-     <width>361</width>
-     <height>361</height>
-    </rect>
-   </property>
-   <property name="verticalScrollBarPolicy">
-    <enum>Qt::ScrollBarAlwaysOn</enum>
-   </property>
-   <attribute name="headerDefaultSectionSize">
-    <number>100</number>
-   </attribute>
-   <column>
-    <property name="text">
-     <string>Maintenance Case Objects</string>
-    </property>
-   </column>
-  </widget>
   <widget class="QGroupBox" name="groupBox">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>168</y>
-     <width>381</width>
-     <height>224</height>
+     <x>5</x>
+     <y>10</y>
+     <width>774</width>
+     <height>61</height>
     </rect>
    </property>
    <property name="title">
@@ -151,7 +29,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>20</y>
+      <y>16</y>
       <width>167</width>
       <height>13</height>
      </rect>
@@ -163,9 +41,9 @@
    <widget class="QLineEdit" name="type_edit">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>74</y>
-      <width>361</width>
+      <x>220</x>
+      <y>32</y>
+      <width>270</width>
       <height>20</height>
      </rect>
     </property>
@@ -176,8 +54,8 @@
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>57</y>
+      <x>220</x>
+      <y>15</y>
       <width>81</width>
       <height>16</height>
      </rect>
@@ -190,8 +68,8 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>36</y>
-      <width>91</width>
+      <y>32</y>
+      <width>71</width>
       <height>20</height>
      </rect>
     </property>
@@ -202,9 +80,9 @@
    <widget class="QLineEdit" name="plan_num_edit">
     <property name="geometry">
      <rect>
-      <x>110</x>
-      <y>36</y>
-      <width>170</width>
+      <x>90</x>
+      <y>32</y>
+      <width>122</width>
       <height>20</height>
      </rect>
     </property>
@@ -215,9 +93,9 @@
    <widget class="QLineEdit" name="status_edit">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>112</y>
-      <width>361</width>
+      <x>499</x>
+      <y>32</y>
+      <width>270</width>
       <height>20</height>
      </rect>
     </property>
@@ -228,8 +106,8 @@
    <widget class="QLabel" name="label_4">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>96</y>
+      <x>499</x>
+      <y>16</y>
       <width>81</width>
       <height>16</height>
      </rect>
@@ -238,31 +116,12 @@
      <string>Status</string>
     </property>
    </widget>
-   <widget class="QLabel" name="message_label">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>145</y>
-      <width>361</width>
-      <height>71</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <weight>75</weight>
-      <bold>true</bold>
-     </font>
-    </property>
-    <property name="text">
-     <string>Message Information</string>
-    </property>
-   </widget>
   </widget>
   <widget class="Line" name="line">
    <property name="geometry">
     <rect>
      <x>0</x>
-     <y>18</y>
+     <y>6</y>
      <width>785</width>
      <height>7</height>
     </rect>
@@ -275,7 +134,7 @@
    <property name="geometry">
     <rect>
      <x>0</x>
-     <y>460</y>
+     <y>530</y>
      <width>785</width>
      <height>7</height>
     </rect>
@@ -288,7 +147,7 @@
    <property name="geometry">
     <rect>
      <x>518</x>
-     <y>430</y>
+     <y>503</y>
      <width>75</width>
      <height>23</height>
     </rect>
@@ -308,7 +167,7 @@
    <property name="geometry">
     <rect>
      <x>697</x>
-     <y>430</y>
+     <y>503</y>
      <width>75</width>
      <height>23</height>
     </rect>
@@ -321,7 +180,7 @@
    <property name="geometry">
     <rect>
      <x>607</x>
-     <y>430</y>
+     <y>503</y>
      <width>75</width>
      <height>23</height>
     </rect>
@@ -330,64 +189,335 @@
     <string>Apply</string>
    </property>
   </widget>
-  <widget class="QGroupBox" name="groupBox_2">
+  <widget class="QTabWidget" name="tabWidget">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>24</y>
-     <width>381</width>
-     <height>48</height>
+     <x>5</x>
+     <y>73</y>
+     <width>775</width>
+     <height>427</height>
     </rect>
    </property>
-   <property name="title">
-    <string>Type</string>
+   <property name="currentIndex">
+    <number>0</number>
    </property>
-   <widget class="QRadioButton" name="zone_parcel_rbutton">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>18</y>
-      <width>120</width>
-      <height>17</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Parcel</string>
-    </property>
+   <widget class="QWidget" name="tab_2">
+    <attribute name="title">
+     <string>Other Plan Import</string>
+    </attribute>
+    <widget class="QTreeWidget" name="main_tree_widget">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>100</y>
+       <width>351</width>
+       <height>291</height>
+      </rect>
+     </property>
+     <column>
+      <property name="text">
+       <string>Result</string>
+      </property>
+     </column>
+    </widget>
+    <widget class="QLabel" name="label_10">
+     <property name="geometry">
+      <rect>
+       <x>7</x>
+       <y>34</y>
+       <width>101</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Zone Type</string>
+     </property>
+    </widget>
+    <widget class="QComboBox" name="zone_type_cbox">
+     <property name="geometry">
+      <rect>
+       <x>111</x>
+       <y>31</y>
+       <width>271</width>
+       <height>22</height>
+      </rect>
+     </property>
+    </widget>
+    <widget class="QComboBox" name="main_process_type_cbox">
+     <property name="geometry">
+      <rect>
+       <x>111</x>
+       <y>58</y>
+       <width>271</width>
+       <height>22</height>
+      </rect>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_5">
+     <property name="geometry">
+      <rect>
+       <x>7</x>
+       <y>61</y>
+       <width>102</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Process Type</string>
+     </property>
+    </widget>
+    <widget class="QTreeWidget" name="current_tree_widget">
+     <property name="geometry">
+      <rect>
+       <x>410</x>
+       <y>100</y>
+       <width>351</width>
+       <height>291</height>
+      </rect>
+     </property>
+     <column>
+      <property name="text">
+       <string>Result</string>
+      </property>
+     </column>
+    </widget>
+    <widget class="QPushButton" name="add_button">
+     <property name="geometry">
+      <rect>
+       <x>370</x>
+       <y>170</y>
+       <width>30</width>
+       <height>25</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="icon">
+      <iconset resource="resources.qrc">
+       <normaloff>:/plugins/lm2/double_right_button.png</normaloff>:/plugins/lm2/double_right_button.png</iconset>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="remove_button">
+     <property name="geometry">
+      <rect>
+       <x>370</x>
+       <y>210</y>
+       <width>30</width>
+       <height>25</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="icon">
+      <iconset resource="resources.qrc">
+       <normaloff>:/plugins/lm2/double_left_button.png</normaloff>:/plugins/lm2/double_left_button.png</iconset>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_11">
+     <property name="geometry">
+      <rect>
+       <x>7</x>
+       <y>8</y>
+       <width>101</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Plan</string>
+     </property>
+    </widget>
+    <widget class="QComboBox" name="plan_cbox">
+     <property name="geometry">
+      <rect>
+       <x>111</x>
+       <y>5</y>
+       <width>271</width>
+       <height>22</height>
+      </rect>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="selected_layer_button">
+     <property name="geometry">
+      <rect>
+       <x>540</x>
+       <y>5</y>
+       <width>75</width>
+       <height>23</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Layer Load</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="find_button">
+     <property name="geometry">
+      <rect>
+       <x>540</x>
+       <y>58</y>
+       <width>75</width>
+       <height>23</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Find</string>
+     </property>
+    </widget>
    </widget>
-   <widget class="QRadioButton" name="zone_sub_rbutton">
-    <property name="geometry">
-     <rect>
-      <x>130</x>
-      <y>18</y>
-      <width>120</width>
-      <height>17</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Sub</string>
-    </property>
-   </widget>
-   <widget class="QRadioButton" name="zone_main_rbutton">
-    <property name="geometry">
-     <rect>
-      <x>250</x>
-      <y>18</y>
-      <width>120</width>
-      <height>17</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Main</string>
-    </property>
+   <widget class="QWidget" name="tab">
+    <attribute name="title">
+     <string>New Parcel Import</string>
+    </attribute>
+    <widget class="QTreeWidget" name="result_twidget">
+     <property name="geometry">
+      <rect>
+       <x>401</x>
+       <y>6</y>
+       <width>361</width>
+       <height>391</height>
+      </rect>
+     </property>
+     <property name="verticalScrollBarPolicy">
+      <enum>Qt::ScrollBarAlwaysOn</enum>
+     </property>
+     <attribute name="headerDefaultSectionSize">
+      <number>100</number>
+     </attribute>
+     <column>
+      <property name="text">
+       <string>Maintenance Case Objects</string>
+      </property>
+     </column>
+    </widget>
+    <widget class="QGroupBox" name="import_groupbox">
+     <property name="enabled">
+      <bool>true</bool>
+     </property>
+     <property name="geometry">
+      <rect>
+       <x>11</x>
+       <y>0</y>
+       <width>381</width>
+       <height>141</height>
+      </rect>
+     </property>
+     <property name="title">
+      <string>Import</string>
+     </property>
+     <widget class="QLineEdit" name="parcel_shape_edit">
+      <property name="geometry">
+       <rect>
+        <x>9</x>
+        <y>104</y>
+        <width>311</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="readOnly">
+       <bool>true</bool>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>85</y>
+        <width>112</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Parcel Shapefile</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="open_parcel_file_button">
+      <property name="geometry">
+       <rect>
+        <x>330</x>
+        <y>102</y>
+        <width>42</width>
+        <height>25</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+      <property name="icon">
+       <iconset resource="resources.qrc">
+        <normaloff>:/plugins/lm2/open.png</normaloff>:/plugins/lm2/open.png</iconset>
+      </property>
+     </widget>
+     <widget class="QRadioButton" name="point_rbutton">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>20</y>
+        <width>82</width>
+        <height>17</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Point</string>
+      </property>
+     </widget>
+     <widget class="QRadioButton" name="line_rbutton">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>40</y>
+        <width>82</width>
+        <height>17</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Line</string>
+      </property>
+     </widget>
+     <widget class="QRadioButton" name="polygon_rbutton">
+      <property name="enabled">
+       <bool>true</bool>
+      </property>
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>60</y>
+        <width>82</width>
+        <height>17</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Polygon</string>
+      </property>
+     </widget>
+    </widget>
+    <widget class="QLabel" name="message_label">
+     <property name="geometry">
+      <rect>
+       <x>12</x>
+       <y>150</y>
+       <width>377</width>
+       <height>71</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <weight>75</weight>
+       <bold>true</bold>
+      </font>
+     </property>
+     <property name="text">
+      <string>Message Information</string>
+     </property>
+    </widget>
    </widget>
   </widget>
   <widget class="QLabel" name="status_label">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>430</y>
-     <width>341</width>
+     <x>10</x>
+     <y>510</y>
+     <width>399</width>
      <height>16</height>
     </rect>
    </property>
@@ -395,9 +525,26 @@
     <string/>
    </property>
   </widget>
+  <widget class="QProgressBar" name="main_load_pbar">
+   <property name="geometry">
+    <rect>
+     <x>520</x>
+     <y>538</y>
+     <width>261</width>
+     <height>14</height>
+    </rect>
+   </property>
+   <property name="value">
+    <number>0</number>
+   </property>
+   <property name="textDirection">
+    <enum>QProgressBar::TopToBottom</enum>
+   </property>
+  </widget>
  </widget>
  <resources>
   <include location="resources.qrc"/>
+  <include location="C:/Users/B.Ankhbold/.qgis2/python/plugins/lm2_mgis/view/resources.qrc"/>
  </resources>
  <connections/>
 </ui>
