--- a/view/PlanCaseDialog.ui
+++ b/view/PlanCaseDialog.ui
@@ -199,7 +199,7 @@
     </rect>
    </property>
    <property name="currentIndex">
-    <number>0</number>
+    <number>1</number>
    </property>
    <widget class="QWidget" name="tab_2">
     <attribute name="title">
@@ -348,7 +348,7 @@
        <x>10</x>
        <y>260</y>
        <width>751</width>
-       <height>135</height>
+       <height>146</height>
       </rect>
      </property>
      <property name="sortingEnabled">
@@ -495,7 +495,7 @@
       <string>Land Use</string>
      </property>
     </widget>
-    <widget class="QComboBox" name="landuse_type_cbox">
+    <widget class="QComboBox" name="land_use_type_cbox">
      <property name="geometry">
       <rect>
        <x>429</x>
@@ -626,8 +626,8 @@
      </property>
      <property name="geometry">
       <rect>
-       <x>687</x>
-       <y>232</y>
+       <x>686</x>
+       <y>239</y>
        <width>75</width>
        <height>23</height>
       </rect>
@@ -636,11 +636,11 @@
       <string>Change</string>
      </property>
     </widget>
-    <widget class="QPushButton" name="add_button_2">
+    <widget class="QPushButton" name="cad_add_button">
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>230</y>
+       <y>213</y>
        <width>30</width>
        <height>25</height>
       </rect>
@@ -657,7 +657,7 @@
      <property name="geometry">
       <rect>
        <x>91</x>
-       <y>234</y>
+       <y>217</y>
        <width>110</width>
        <height>17</height>
       </rect>
@@ -666,39 +666,15 @@
       <string>Change right form</string>
      </property>
     </widget>
-    <widget class="QTreeWidget" name="cadastre_current_tree_widget">
+    <widget class="QTableWidget" name="cadastre_current_twidget">
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>260</y>
+       <y>266</y>
        <width>751</width>
-       <height>135</height>
+       <height>140</height>
       </rect>
      </property>
-     <property name="sortingEnabled">
-      <bool>true</bool>
-     </property>
-     <property name="wordWrap">
-      <bool>true</bool>
-     </property>
-     <attribute name="headerDefaultSectionSize">
-      <number>200</number>
-     </attribute>
-     <column>
-      <property name="text">
-       <string>Parcel Info</string>
-      </property>
-     </column>
-     <column>
-      <property name="text">
-       <string>Form type</string>
-      </property>
-     </column>
-     <column>
-      <property name="text">
-       <string>From</string>
-      </property>
-     </column>
     </widget>
     <widget class="QComboBox" name="cadastre_form_type_change_cbox">
      <property name="enabled">
@@ -707,17 +683,17 @@
      <property name="geometry">
       <rect>
        <x>206</x>
-       <y>232</y>
+       <y>215</y>
        <width>261</width>
        <height>22</height>
       </rect>
      </property>
     </widget>
-    <widget class="QPushButton" name="remove_button_2">
+    <widget class="QPushButton" name="cad_remove_button">
      <property name="geometry">
       <rect>
        <x>50</x>
-       <y>230</y>
+       <y>213</y>
        <width>30</width>
        <height>25</height>
       </rect>
@@ -730,32 +706,21 @@
        <normaloff>:/plugins/lm2/up_button.png</normaloff>:/plugins/lm2/up_button.png</iconset>
      </property>
     </widget>
-    <widget class="QTreeWidget" name="cadastre_tree_widget">
+    <widget class="QTableWidget" name="cadastre_twidget">
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>90</y>
+       <y>74</y>
        <width>751</width>
        <height>135</height>
       </rect>
      </property>
-     <property name="sortingEnabled">
-      <bool>true</bool>
-     </property>
-     <property name="wordWrap">
-      <bool>true</bool>
-     </property>
-     <column>
-      <property name="text">
-       <string>Result</string>
-      </property>
-     </column>
     </widget>
-    <widget class="QPushButton" name="find_button_2">
+    <widget class="QPushButton" name="cadastre_find_button">
      <property name="geometry">
       <rect>
-       <x>687</x>
-       <y>58</y>
+       <x>686</x>
+       <y>49</y>
        <width>75</width>
        <height>23</height>
       </rect>
@@ -771,8 +736,21 @@
      <property name="geometry">
       <rect>
        <x>480</x>
-       <y>232</y>
+       <y>215</y>
        <width>200</width>
+       <height>22</height>
+      </rect>
+     </property>
+    </widget>
+    <widget class="QComboBox" name="cad_process_type_cbox">
+     <property name="enabled">
+      <bool>true</bool>
+     </property>
+     <property name="geometry">
+      <rect>
+       <x>206</x>
+       <y>240</y>
+       <width>474</width>
        <height>22</height>
       </rect>
      </property>
@@ -952,6 +930,19 @@
    </property>
    <property name="textDirection">
     <enum>QProgressBar::TopToBottom</enum>
+   </property>
+  </widget>
+  <widget class="QLabel" name="error_label">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>538</y>
+     <width>501</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
    </property>
   </widget>
  </widget>
